@@ -5,6 +5,10 @@ include::include.adoc[]
 
 - Add a way to register `ConfigurationObject` globally without the need for a Global Extension
 
+- Annotations for local extensions can now be defined as `@Repeatable` and applied multiple times to the same target.
+  Spock will handle this appropriately and call the extension once for each annotation.
+
+
 == 2.0-M3 (2020-06-11)
 
 === Breaking Changes
